--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,3 +1,6 @@
+// This file is a template for cmake that generates the
+// necessary version header file on compilation.
+
 #define VERSION_MAJOR @android_battery_check_VERSION_MAJOR@
 #define VERSION_MINOR @android_battery_check_VERSION_MINOR@
 #define VERSION_PATCH @android_battery_check_VERSION_PATCH@
